# peripherals-lidar

./: CMakeLists.txt  NOTICE  README.md  README_en.md  package.xml
.github/workflows/: code-style.yml
cmake/: FetchThirdParty.cmake
include/: lidar.h
src/: lidar_core.c  lidar_core.h
src/drivers/drv_uart_rplidar/: driver.cmake  drv_uart_rplidar.cpp
src/drivers/drv_uart_ydlidar/: driver.cmake  drv_uart_ydlidar.c
test/: test_lidar_uart.c
